[package]
name = "dcm2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beta = "0.0.0"
dicom = "0.5.4"
dicom-dump = "0.5.4"
dicom-object = "0.5.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.93"
